--- a/design/sass/pages/style.scss
+++ b/design/sass/pages/style.scss
@@ -1,4 +1,3 @@
-
 @import '../composants/composants';
 
 
@@ -18,9 +17,7 @@ body {
 }
 
 h1 {
-    font-family: 'Shrikhand';
-    text-align: center;
-    margin: 5px 0;
+    @extend %header;
 }
 
 // Hero section
@@ -165,23 +162,7 @@ h1 {
 }
 
 footer{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    background-color: #262323;
-    color: $background;
-    padding: 10px 10px 20px 10px;
-    font-size: 12px;
-    a{
-        text-decoration: none;
-        color: $background;
-        margin-bottom: 5px;
-    }
-    .fa-utensils, .fa-handshake-angle{
-        width: 20px;
-        text-align: center;
-    }
+    @extend %footer
 }
 
 
