--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -1,10 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-h1 {
+header {
   font-family: 'Shrikhand';
   text-align: center;
-  margin: 5px 0;
+  margin: 5px 0 0 0;
   position: relative;
+}
+
+header h1 {
+  margin: 0;
+}
+
+header a {
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+}
+
+header .fa-arrow-left {
+  position: absolute;
+  top: 25%;
+  left: 30px;
 }
 
 footer {
