--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -3,10 +3,27 @@
 body{
     background-color: $background;
 }
-
-h1{
+// titre et fleche retour
+header{
     @extend %header;
 }
+
+// image du restaurant
+#imageResto{
+    height: 200px;
+    width: 100%;
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
+#lesMenus{
+    background-color: red;
+    height: 550px
+}
+
 
 footer{
     @extend %footer;
