--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+body {
+  font-family: "Roboto";
+  margin: 0;
+}
+
 header {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
   text-align: center;
   margin: 5px 0 0 0;
   position: relative;
@@ -9,6 +14,7 @@ header {
 
 header h1 {
   margin: 0;
+  font-weight: 100;
 }
 
 header a {
@@ -52,12 +58,8 @@ footer .fa-utensils, footer .fa-handshake-angle {
   text-align: center;
 }
 
-body {
-  background-color: #f6f6f6;
-}
-
 #imageResto {
-  height: 200px;
+  height: 320px;
   width: 100%;
 }
 
@@ -69,6 +71,10 @@ body {
 }
 
 #lesMenus {
+  border-radius: 35px;
+  margin-top: -30px;
+  z-index: 6;
+  position: relative;
   background-color: red;
   height: 550px;
 }
