--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -1,7 +1,7 @@
 @import '../composants/composants';
 
 body{
-    background-color: $background;
+    @extend %body;
 }
 // titre et fleche retour
 header{
@@ -10,7 +10,7 @@ header{
 
 // image du restaurant
 #imageResto{
-    height: 200px;
+    height: 320px;
     width: 100%;
     img{
         height: 100%;
@@ -20,6 +20,10 @@ header{
 }
 
 #lesMenus{
+    border-radius: 35px;
+    margin-top: -30px;
+    z-index: 6;
+    position: relative;
     background-color: red;
     height: 550px
 }
