--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+body {
+  font-family: "Roboto";
+  margin: 0;
+}
+
 header {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
   text-align: center;
   margin: 5px 0 0 0;
   position: relative;
@@ -9,6 +14,7 @@ header {
 
 header h1 {
   margin: 0;
+  font-weight: 100;
 }
 
 header a {
@@ -78,18 +84,13 @@ footer .fa-utensils, footer .fa-handshake-angle {
           box-shadow: 5px 8px 5px #d3d3d3;
 }
 
-body {
-  font-family: 'Roboto';
-  margin: 0;
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
 .titre {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
 }
 
 #hero {
