--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -71,7 +71,7 @@ footer .fa-utensils, footer .fa-handshake-angle {
 }
 
 #lesMenus {
-  border-radius: 35px;
+  border-radius: 35px 35px 0 0;
   margin-top: -30px;
   z-index: 6;
   position: relative;
