--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -20,7 +20,7 @@ header{
 }
 
 #lesMenus{
-    border-radius: 35px;
+    border-radius: 35px 35px 0 0;
     margin-top: -30px;
     z-index: 6;
     position: relative;
