--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 body {
@@ -58,7 +59,7 @@ footer .fa-utensils, footer .fa-handshake-angle {
   text-align: center;
 }
 
-#lesMenus .platWrapper {
+.platWrapper_Entrée, .platWrapper_Plat, .platWrapper_Dessert {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -69,6 +70,164 @@ footer .fa-utensils, footer .fa-handshake-angle {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.platWrapper_Entrée, .platWrapper_Plat, .platWrapper_Dessert {
+  width: 100%;
+}
+
+.platWrapper_Entrée .typePlat, .platWrapper_Plat .typePlat, .platWrapper_Dessert .typePlat {
+  width: 90%;
+  text-transform: uppercase;
+}
+
+.platWrapper_Entrée .typePlat h2, .platWrapper_Plat .typePlat h2, .platWrapper_Dessert .typePlat h2 {
+  margin-bottom: 5px;
+  font-weight: 100;
+  font-size: 16px;
+}
+
+.traitVert {
+  width: 35px;
+  height: 4px;
+  background-color: #99e2d0;
+}
+
+.descriptionWrapper {
+  width: 90%;
+  margin-top: 10px;
+  background-color: white;
+  height: 70px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 15px;
+  -webkit-box-shadow: 5px 5px 10px #d3d3d3;
+          box-shadow: 5px 5px 10px #d3d3d3;
+  cursor: pointer;
+  -webkit-animation: menuUp 1s forwards;
+          animation: menuUp 1s forwards;
+}
+
+.descriptionWrapper .descriptionPlat {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.descriptionWrapper .descriptionPlat .intitulePlat {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-left: 10px;
+}
+
+.descriptionWrapper .descriptionPlat h3 {
+  margin: 0;
+}
+
+.descriptionWrapper .descriptionPlat p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+
+.descriptionWrapper .prixPlat {
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-bottom: 8px;
+}
+
+.descriptionWrapper .animationPlat {
+  margin-right: -300px;
+  width: 20%;
+  background-color: #99e2d0;
+}
+
+.descriptionWrapper .fa-circle-check {
+  color: white;
+  font-size: 2.1em;
+  -webkit-transform: rotate(0turn);
+          transform: rotate(0turn);
+}
+
+.descriptionWrapper:hover .animationPlat {
+  margin-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+.descriptionWrapper:hover .fa-circle-check {
+  -webkit-transform: rotate(-1turn);
+          transform: rotate(-1turn);
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+}
+
+@-webkit-keyframes menuUp {
+  from {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    opacity: 0%;
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 100%;
+  }
+}
+
+@keyframes menuUp {
+  from {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    opacity: 0%;
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 100%;
+  }
 }
 
 * {
@@ -98,7 +257,6 @@ footer .fa-utensils, footer .fa-handshake-angle {
   z-index: 6;
   position: relative;
   background-color: #f0f0f0;
-  height: 550px;
   padding: auto;
 }
 
@@ -122,92 +280,22 @@ footer .fa-utensils, footer .fa-handshake-angle {
   font-size: 22px;
 }
 
-#lesMenus .platWrapper .typePlat {
-  width: 95%;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  text-transform: uppercase;
+.platWrapper_Entrée:nth-child(2) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
 }
 
-#lesMenus .platWrapper .typePlat h2 {
-  margin-bottom: 5px;
-  font-weight: 100;
-  font-size: 16px;
+.platWrapper_Entrée:nth-child(2) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
 
-#lesMenus .traitVert {
-  width: 35px;
-  height: 4px;
-  background-color: #99e2d0;
+.platWrapper_Entrée:nth-child(2) {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
 }
 
-#lesMenus .descriptionWrapper {
-  margin-top: 10px;
-  background-color: white;
-  width: 95%;
-  height: 70px;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border-radius: 15px;
-  -webkit-box-shadow: 5px 5px 10px #d3d3d3;
-          box-shadow: 5px 5px 10px #d3d3d3;
-}
-
-#lesMenus .descriptionWrapper .descriptionPlat {
-  width: 60%;
-  min-width: 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-#lesMenus .descriptionWrapper .descriptionPlat h3 {
-  margin: 0;
-}
-
-#lesMenus .descriptionWrapper .descriptionPlat p {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 0;
-}
-
-#lesMenus .descriptionWrapper .prixPlat {
-  width: 20%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-#lesMenus .descriptionWrapper .animationPlat {
-  display: none;
-  width: 20%;
-  background-color: #99e2d0;
-}
-
-#lesMenus .descriptionWrapper:hover .animationPlat {
-  display: block;
+footer {
+  position: relative;
 }
 /*# sourceMappingURL=menu.css.map */
