--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -35,9 +35,7 @@ header {
     z-index: 6;
     position: relative;
     background-color: $background;
-    height: 550px;
     padding: auto;
-
     .nomResto {
         padding-top: 10px;
         display: flex;
@@ -52,79 +50,19 @@ header {
             font-size: 22px;
         }
     }
-
-    .platWrapper {
-        @extend %flexColumnCenter;
-
-        .typePlat {
-            width: 95%;
-            justify-content: flex-start;
-            text-transform: uppercase;
-            h2{
-                margin-bottom: 5px;
-                font-weight: 100;
-                font-size: 16px;
 }
-            }
-        }
-        .traitVert{
-            width: 35px;
-            height: 4px;
-            background-color: #99e2d0;
-        }
-        .descriptionWrapper {
-            margin-top: 10px;
-            background-color: white;
-            width: 95%;
-            height: 70px;
-            overflow: hidden;
-            display: flex;
-            justify-content: space-between;
-            border-radius: 15px;
-            box-shadow: 5px 5px 10px #d3d3d3;
+.platWrapper_Entrée {
+      @extend %cardPlat; 
+}
 
-            .descriptionPlat {
-                width: 60%;
-                min-width: 30%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-
-                h3 {
-                    margin: 0;
-                }
-
-                p {
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    margin: 0;
-                }
-            }
-            
-            .prixPlat {
-                width: 20%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                justify-content: flex-end;
-            }
-
-            .animationPlat {
-                display: none;
-                width: 20%;
-                background-color: $couleurbackgrNouveau;
-            }
-
-            &:hover .animationPlat {
-                display: block;
-            }
-        }
-    }
-
-
-
-
+.platWrapper_Plat{
+    // width: 100%;
+    @extend %cardPlat;
+}
+.platWrapper_Dessert{
+    @extend %cardPlat
+}
 footer {
+    position : relative;
     @extend %footer;
 }
