--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -84,6 +84,156 @@ footer .fa-utensils, footer .fa-handshake-angle {
           box-shadow: 5px 8px 5px #d3d3d3;
 }
 
+#hero button:hover {
+  -webkit-filter: brightness(1.03);
+          filter: brightness(1.03);
+  -webkit-box-shadow: 5px 8px 5px #a0a0a0;
+          box-shadow: 5px 8px 5px #a0a0a0;
+}
+
+.traitVert {
+  width: 35px;
+  height: 4px;
+  background-color: #99e2d0;
+}
+
+.descriptionWrapper {
+  width: 90%;
+  margin-top: 10px;
+  background-color: white;
+  height: 70px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 15px;
+  -webkit-box-shadow: 5px 5px 10px #d3d3d3;
+          box-shadow: 5px 5px 10px #d3d3d3;
+  cursor: pointer;
+  -webkit-animation: menuUp 1s forwards;
+          animation: menuUp 1s forwards;
+}
+
+.descriptionWrapper .descriptionPlat {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.descriptionWrapper .descriptionPlat .intitulePlat {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-left: 10px;
+}
+
+.descriptionWrapper .descriptionPlat h3 {
+  margin: 0;
+}
+
+.descriptionWrapper .descriptionPlat p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+
+.descriptionWrapper .prixPlat {
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-bottom: 8px;
+}
+
+.descriptionWrapper .animationPlat {
+  margin-right: -300px;
+  width: 20%;
+  background-color: #99e2d0;
+}
+
+.descriptionWrapper .fa-circle-check {
+  color: white;
+  font-size: 2.1em;
+  -webkit-transform: rotate(0turn);
+          transform: rotate(0turn);
+}
+
+.descriptionWrapper:hover .animationPlat {
+  margin-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+.descriptionWrapper:hover .fa-circle-check {
+  -webkit-transform: rotate(-1turn);
+          transform: rotate(-1turn);
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+}
+
+@-webkit-keyframes menuUp {
+  from {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    opacity: 0%;
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 100%;
+  }
+}
+
+@keyframes menuUp {
+  from {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+    opacity: 0%;
+  }
+  to {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 100%;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
