--- a/design/sass/composants/_composants.scss
+++ b/design/sass/composants/_composants.scss
@@ -152,6 +152,10 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
         margin-right: -300px;
         width: 20%;
         background-color: $couleurbackgrNouveau;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 1.5s;
     }
 
     .fa-circle-check {
@@ -174,7 +178,7 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
 }
 @keyframes menuUp{
     from{
-        transform: translateY(10px);
+        transform: translateY(15px);
         opacity : 0%;
     }
     to{
