--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -35,7 +35,6 @@ header {
     z-index: 6;
     position: relative;
     background-color: $background;
-    padding: auto;
     .nomResto {
         padding-top: 10px;
         display: flex;
@@ -53,10 +52,18 @@ header {
 }
 .platWrapper_Entrée {
       @extend %cardPlat; 
+      :nth-child(2){
+        animation-delay: 0.2s;
+      }
+      :nth-child(3){
+        animation-delay: 0.5s;
+      }
+      :nth-child(4){
+        animation-delay: 0.7s;
+      }
 }
 
 .platWrapper_Plat{
-    // width: 100%;
     @extend %cardPlat;
 }
 .platWrapper_Dessert{
@@ -65,4 +72,29 @@ header {
 footer {
     position : relative;
     @extend %footer;
+}
+
+
+.fa-stack{
+    width: 50px;
+    height: 50px;
+    transition: all 1s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .fa-regular{
+        transition-duration: 1s;
+    }
+    .fa-solid{
+        font-size: 16px;
+        background:-webkit-linear-gradient(top, red 30%, blue 70%);
+        background-clip:text;
+        -webkit-background-clip:text;
+        color:transparent;
+        transition: all 1s;
+    }
+    &:hover .fa-solid{
+        z-index: 1000;
+        transition-duration: 1s;
+    }
 }
