--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -175,6 +175,17 @@ footer .fa-utensils, footer .fa-handshake-angle {
   margin-right: -300px;
   width: 20%;
   background-color: #99e2d0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 1.5s;
+  transition: all 1.5s;
 }
 
 .descriptionWrapper .fa-circle-check {
@@ -210,8 +221,8 @@ footer .fa-utensils, footer .fa-handshake-angle {
 
 @-webkit-keyframes menuUp {
   from {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
     opacity: 0%;
   }
   to {
@@ -223,8 +234,8 @@ footer .fa-utensils, footer .fa-handshake-angle {
 
 @keyframes menuUp {
   from {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
     opacity: 0%;
   }
   to {
