--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -310,10 +310,8 @@ footer {
 }
 
 .fa-stack {
-  width: 50px;
-  height: 50px;
-  -webkit-transition: all 1s;
-  transition: all 1s;
+  width: 80px;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -323,26 +321,32 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
 }
 
 .fa-stack .fa-regular {
-  -webkit-transition-duration: 1s;
-          transition-duration: 1s;
+  font-size: 50px;
+  position: absolute;
+  z-index: 3;
 }
 
 .fa-stack .fa-solid {
-  font-size: 16px;
-  background: -webkit-linear-gradient(top, red 30%, blue 70%);
-  background-clip: text;
-  -webkit-background-clip: text;
+  width: 0;
+  height: 0;
+  position: absolute;
+  font-size: 50px;
   color: transparent;
-  -webkit-transition: all 1s;
-  transition: all 1s;
+  z-index: 1;
 }
 
 .fa-stack:hover .fa-solid {
-  z-index: 1000;
-  -webkit-transition-duration: 1s;
-          transition-duration: 1s;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(45deg, #FF79DA 40%, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-transition: 2s;
+  transition: 2s;
 }
 /*# sourceMappingURL=menu.css.map */
