--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -76,25 +76,33 @@ footer {
 
 
 .fa-stack{
-    width: 50px;
-    height: 50px;
-    transition: all 1s;
+    width: 80px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     .fa-regular{
-        transition-duration: 1s;
+        font-size: 50px;
+        position: absolute;
+        z-index: 3;
+       
     }
     .fa-solid{
-        font-size: 16px;
-        background:-webkit-linear-gradient(top, red 30%, blue 70%);
+        width: 0;
+        height: 0;
+        position: absolute;
+        font-size: 50px;
+        color:transparent;
+        z-index: 1; 
+    }
+    &:hover .fa-solid{
+        width: 100%;
+        height: 100%;
+        background: -webkit-linear-gradient( 45deg, $secondaryColor 40%, $primaryColor);
         background-clip:text;
         -webkit-background-clip:text;
         color:transparent;
-        transition: all 1s;
-    }
-    &:hover .fa-solid{
-        z-index: 1000;
-        transition-duration: 1s;
+        transition: 2s;
     }
 }
