--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -254,6 +254,179 @@ footer .fa-utensils, footer .fa-handshake-angle {
   font-family: "Shrikhand";
 }
 
+#loaderContainer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  z-index: 3000;
+  -webkit-animation: fadeInContainerLoader 13s forwards;
+          animation: fadeInContainerLoader 13s forwards;
+}
+
+#loaderContainer .loader {
+  border: 16px solid #9356DC;
+  /* Light grey */
+  border-top: 16px solid #FF79DA;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+}
+
+#loaderContainer .textLoader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+  font-size: 22px;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: relative;
+  width: 350px;
+  height: 50px;
+}
+
+#loaderContainer .textLoader span {
+  background: -webkit-linear-gradient(45deg, #FF79DA 40%, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+#loaderContainer .textLoader span:nth-child(1) {
+  position: absolute;
+  -webkit-animation: fadeOut 4s forwards;
+          animation: fadeOut 4s forwards;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+#loaderContainer .textLoader span:nth-child(2) {
+  position: absolute;
+  opacity: 0;
+  -webkit-animation: fadeIn 3s backwards;
+          animation: fadeIn 3s backwards;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+#loaderContainer .textLoader span:nth-child(3) {
+  position: absolute;
+  opacity: 0;
+  -webkit-animation: fadeIn 3s backwards;
+          animation: fadeIn 3s backwards;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+
+@-webkit-keyframes fadeInContainerLoader {
+  0% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes fadeInContainerLoader {
+  0% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 #hero {
   display: -webkit-box;
   display: -ms-flexbox;
