--- a/design/sass/pages/style.scss
+++ b/design/sass/pages/style.scss
@@ -14,6 +14,95 @@ body {
 .titre {
     font-family: $ecritureTitre;
 }
+#loaderContainer{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    z-index: 3000;
+    animation: fadeInContainerLoader 13s forwards;
+    .loader {
+        border: 16px solid $primaryColor; /* Light grey */
+        border-top: 16px solid $secondaryColor; /* Blue */
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+      }
+      .textLoader{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+        font-size: 22px;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+        width: 350px;
+        height: 50px;
+        span{
+            background: -webkit-linear-gradient( 45deg, $secondaryColor 40%, $primaryColor);
+            background-clip:text;
+            -webkit-background-clip:text;
+            color:transparent;
+        }
+        span:nth-child(1){
+            position: absolute;
+            animation: fadeOut 4s forwards;
+            animation-delay: 1s;
+        }
+        span:nth-child(2){
+            position: absolute;
+            opacity: 0;
+            animation: fadeIn 3s backwards;
+            animation-delay: 3s;
+        }
+        span:nth-child(3){
+            position: absolute;
+            opacity: 0;
+            animation: fadeIn 3s backwards;
+            animation-delay: 6s;
+        }
+      }
+}
+@keyframes fadeInContainerLoader {
+    0%{
+        opacity: 1;
+    }
+    70%{
+        opacity: 1;
+    }
+    100%{
+     opacity: 0;
+     visibility: hidden
+    }
+}
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+  }
+  @keyframes fadeOut{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity : 0;
+    }
+  }
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 header {
     @extend %header;
