--- a/design/sass/composants/_composants.scss
+++ b/design/sass/composants/_composants.scss
@@ -10,35 +10,38 @@ $couleurEcritureNouveau : #0e8f6f;
 $ecritureTitre : 'Shrikhand';
 $ecriturePrincipal : 'Roboto';
 $buttonBoxShadowColor : #d3d3d3;
-$buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
+$buttonBoxShadowColorDarken : darken(#d3d3d3, 20%);
 
-%body{
+%body {
     font-family: $ecriturePrincipal;
     margin: 0;
 }
 
-%header{
+%header {
     font-family: $ecritureTitre;
     text-align: center;
     margin: 5px 0 0 0;
     position: relative;
-    h1{
+
+    h1 {
         margin: 0;
         font-weight: 100;
     }
-    a{
+
+    a {
         text-decoration: none;
         color: black;
         font-weight: 600;
     }
-    .fa-arrow-left{
+
+    .fa-arrow-left {
         position: absolute;
-        top : 25%;
-        left : 30px
+        top: 25%;
+        left: 30px
     }
 }
 
-%footer{
+%footer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -47,12 +50,15 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
     color: $background;
     padding: 10px 10px 20px 10px;
     font-size: 12px;
-    a{
+
+    a {
         text-decoration: none;
         color: $background;
         margin-bottom: 5px;
     }
-    .fa-utensils, .fa-handshake-angle{
+
+    .fa-utensils,
+    .fa-handshake-angle {
         width: 20px;
         text-align: center;
     }
@@ -63,7 +69,8 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
     flex-direction: column;
     align-items: center;
 }
-%boutonColore{
+
+%boutonColore {
     border-radius: 50px;
     padding: 20px;
     border: none;
@@ -72,14 +79,15 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
     font-size: 14px;
     font-weight: 600;
     box-shadow: 5px 8px 5px $buttonBoxShadowColor;
-    &:hover{
+
+    &:hover {
         filter: brightness(1.03);
-        box-shadow: 5px 8px 5px $buttonBoxShadowColorDarken;   
+        box-shadow: 5px 8px 5px $buttonBoxShadowColorDarken;
     }
 
 }
 
-%cardPlat{
+%cardPlat {
     @extend %flexColumnCenter;
     width: 100%;
 
@@ -113,6 +121,7 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
     box-shadow: 5px 5px 10px #d3d3d3;
     cursor: pointer;
     animation: menuUp 1s forwards;
+
     .descriptionPlat {
         width: 100%;
         display: flex;
@@ -171,18 +180,98 @@ $buttonBoxShadowColorDarken : darken(#d3d3d3,20%);
         justify-content: center;
         transition-duration: 1s;
     }
-    &:hover .fa-circle-check{
+
+    &:hover .fa-circle-check {
         transform: rotate(-1turn);
         transition: transform 1s ease-in-out;
     }
 }
-@keyframes menuUp{
-    from{
-        transform: translateY(15px);
-        opacity : 0%;
+
+%coeurAnime{
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    
+        .fa-regular {
+            font-size: 20px;
+            position: absolute;
+        }
+    
+        .fa-solid {
+            width: 0;
+            height: 0;
+            position: absolute;
+            font-size: 21px;
+            color: transparent;
+        }
+    
+        &:hover .fa-solid {
+            width: 100%;
+            height: 100%;
+            background: -webkit-linear-gradient(45deg, $secondaryColor 40%, $primaryColor);
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            transition: 500ms;
+        }
     }
-    to{
+
+
+@keyframes menuUp {
+    from {
+        transform: translateY(15px);
+        opacity: 0%;
+    }
+
+    to {
         transform: translateY(0px);
         opacity: 100%;
+    }
+}
+@keyframes fadeInContainerLoader {
+    0% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        visibility: hidden
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
