--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -35,6 +35,7 @@ header {
     z-index: 6;
     position: relative;
     background-color: $background;
+
     .nomResto {
         padding-top: 10px;
         display: flex;
@@ -50,59 +51,37 @@ header {
         }
     }
 }
+
 .platWrapper_Entrée {
-      @extend %cardPlat; 
-      :nth-child(2){
+    @extend %cardPlat;
+
+    :nth-child(2) {
         animation-delay: 0.2s;
-      }
-      :nth-child(3){
+    }
+
+    :nth-child(3) {
         animation-delay: 0.5s;
-      }
-      :nth-child(4){
+    }
+
+    :nth-child(4) {
         animation-delay: 0.7s;
-      }
+    }
 }
 
-.platWrapper_Plat{
+.platWrapper_Plat {
     @extend %cardPlat;
 }
-.platWrapper_Dessert{
+
+.platWrapper_Dessert {
     @extend %cardPlat
 }
+
 footer {
-    position : relative;
+    position: relative;
     @extend %footer;
 }
 
 
-.fa-stack{
-    width: 80px;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    .fa-regular{
-        font-size: 50px;
-        position: absolute;
-        z-index: 3;
-       
-    }
-    .fa-solid{
-        width: 0;
-        height: 0;
-        position: absolute;
-        font-size: 50px;
-        color:transparent;
-        z-index: 1; 
-    }
-    &:hover .fa-solid{
-        width: 100%;
-        height: 100%;
-        background: -webkit-linear-gradient( 45deg, $secondaryColor 40%, $primaryColor);
-        background-clip:text;
-        -webkit-background-clip:text;
-        color:transparent;
-        transition: 2s;
-    }
+.fa-stack {
+   @extend %coeurAnime;
 }
