--- a/design/sass/pages/style.scss
+++ b/design/sass/pages/style.scss
@@ -14,7 +14,8 @@ body {
 .titre {
     font-family: $ecritureTitre;
 }
-#loaderContainer{
+
+#loaderContainer {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -26,16 +27,18 @@ body {
     flex-direction: column;
     background-color: white;
     z-index: 3000;
-    animation: fadeInContainerLoader 13s forwards;
+    animation: fadeInContainerLoader 5s forwards;
+
     .loader {
-        border: 16px solid $primaryColor; /* Light grey */
-        border-top: 16px solid $secondaryColor; /* Blue */
+        border: 16px solid $primaryColor;
+        border-top: 16px solid $secondaryColor;
         border-radius: 50%;
         width: 120px;
         height: 120px;
         animation: spin 2s linear infinite;
-      }
-      .textLoader{
+    }
+
+    .textLoader {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -46,63 +49,36 @@ body {
         position: relative;
         width: 350px;
         height: 50px;
-        span{
-            background: -webkit-linear-gradient( 45deg, $secondaryColor 40%, $primaryColor);
-            background-clip:text;
-            -webkit-background-clip:text;
-            color:transparent;
+
+        span {
+            background: -webkit-linear-gradient(45deg, $secondaryColor 40%, $primaryColor);
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
         }
-        span:nth-child(1){
+
+        span:nth-child(1) {
             position: absolute;
-            animation: fadeOut 4s forwards;
+            animation: fadeOut 1s forwards;
+        }
+
+        span:nth-child(2) {
+            position: absolute;
+            opacity: 0;
+            animation: fadeIn 1s backwards;
             animation-delay: 1s;
         }
-        span:nth-child(2){
+
+        span:nth-child(3) {
             position: absolute;
             opacity: 0;
-            animation: fadeIn 3s backwards;
+            animation: fadeIn 1s backwards;
             animation-delay: 3s;
         }
-        span:nth-child(3){
-            position: absolute;
-            opacity: 0;
-            animation: fadeIn 3s backwards;
-            animation-delay: 6s;
-        }
-      }
-}
-@keyframes fadeInContainerLoader {
-    0%{
-        opacity: 1;
-    }
-    70%{
-        opacity: 1;
-    }
-    100%{
-     opacity: 0;
-     visibility: hidden
     }
 }
-@keyframes fadeIn{
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-  }
-  @keyframes fadeOut{
-    0%{
-        opacity: 1;
-    }
-    100%{
-        opacity : 0;
-    }
-  }
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
+
+
 
 header {
     @extend %header;
@@ -115,13 +91,16 @@ header {
     flex-direction: column;
     justify-content: center;
     margin-bottom: 40px;
-    h2{
+
+    h2 {
         padding: 0 70px 0 70px;
         margin-bottom: 0;
     }
-    p{
+
+    p {
         margin-top: 0;
     }
+
     #location {
         text-align: center;
         background-color: #eaeaea;
@@ -142,18 +121,21 @@ header {
         text-align: center;
         padding-bottom: 20px;
     }
-    button{
+
+    button {
         @extend %boutonColore;
     }
 }
 
-#fonctionnement{
+#fonctionnement {
     width: 85%;
     margin: auto;
-   .stepNumberContainer{
-    @extend %flexColumnCenter;
-    flex-wrap: wrap;
-        .stepNumber{
+
+    .stepNumberContainer {
+        @extend %flexColumnCenter;
+        flex-wrap: wrap;
+
+        .stepNumber {
             position: relative;
             border-radius: 20px;
             background-color: $background;
@@ -166,12 +148,14 @@ header {
             margin-bottom: 20px;
             box-shadow: 5px 5px 10px #d3d3d3;
         }
-        h2{
+
+        h2 {
             font-weight: bolder;
         }
-        .number{
-            position : absolute;
-            left : -9px;
+
+        .number {
+            position: absolute;
+            left: -9px;
             display: flex;
             background: $primaryColor;
             width: 18px;
@@ -183,41 +167,56 @@ header {
             color: white;
             font-weight: 100;
         }
-        .fa-mobile-screen, .fa-list, .fa-store{
+
+        .fa-mobile-screen,
+        .fa-list,
+        .fa-store {
             color: gray;
             padding: 0 25px;
             width: 62px;
         }
-        .fa-store{
+
+        .fa-store {
             color: $primaryColor;
         }
-   }
+    }
 }
 
-#restaurants{
+#restaurants {
     background-color: $background;
     padding: 30px 0 30px 0;
-    h2{
+
+    h2 {
         margin-left: 20px;
     }
-    .listeRestoContainer{
+
+    .listeRestoContainer {
         width: 90%;
         margin: auto;
-        .restoCard{
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
+        .restoCard {
             width: 100%;
             overflow: hidden;
             border-radius: 15px;
             background-color: white;
             margin-bottom: 20px;
-            .imageResto{
+
+            .imageResto {
                 position: relative;
             }
-            img{
+
+            img {
                 width: 100%;
                 height: 150px;
                 object-fit: cover;
             }
-            .new{
+
+            .new {
                 background-color: $couleurbackgrNouveau;
                 color: $couleurEcritureNouveau;
                 position: absolute;
@@ -227,30 +226,33 @@ header {
                 top: 10%;
                 padding: 8px;
             }
-        .caption{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px 0 10px;
-            height: 60px;
-            font-size: 15px;
-            h3{
-                margin: 0;
+
+            .caption {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 20px 0 10px;
+                height: 60px;
+                font-size: 15px;
+
+                h3 {
+                    margin: 0;
+                }
+
+                p {
+                    margin: 0;
+                }
+
+                .fa-stack {
+                    font-size: 20px;
+                    @extend %coeurAnime
+                }
             }
-            p{
-                margin: 0;
-            }
-            .fa-heart{
-                font-size: 20px;
-            }
-        }   
 
         }
     }
 }
 
-footer{
+footer {
     @extend %footer
 }
-
-
