--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -73,6 +73,26 @@ footer .fa-handshake-angle {
           align-items: center;
 }
 
+button {
+  border-radius: 50px;
+  padding: 20px;
+  border: none;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+  -webkit-box-shadow: 5px 8px 5px #d3d3d3;
+          box-shadow: 5px 8px 5px #d3d3d3;
+}
+
+button:hover {
+  -webkit-filter: brightness(1.06);
+          filter: brightness(1.06);
+  -webkit-box-shadow: 5px 8px 5px #a0a0a0;
+          box-shadow: 5px 8px 5px #a0a0a0;
+}
+
 .platWrapper_Entrée, .platWrapper_Plat, .platWrapper_Dessert {
   width: 100%;
 }
@@ -427,6 +447,10 @@ footer .fa-handshake-angle {
 .platWrapper_Entrée :nth-child(4) {
   -webkit-animation-delay: 0.7s;
           animation-delay: 0.7s;
+}
+
+button {
+  margin: 30px 0 30px 0;
 }
 
 footer {
