--- a/design/sass/pages/style.scss
+++ b/design/sass/pages/style.scss
@@ -27,7 +27,7 @@ body {
     flex-direction: column;
     background-color: white;
     z-index: 3000;
-    animation: fadeInContainerLoader 5s forwards;
+    animation: fadeInContainerLoader 4s forwards;
 
     .loader {
         border: 16px solid $primaryColor;
@@ -65,7 +65,7 @@ body {
         span:nth-child(2) {
             position: absolute;
             opacity: 0;
-            animation: fadeIn 1s backwards;
+            animation: fadeIn 700ms backwards;
             animation-delay: 1s;
         }
 
@@ -73,7 +73,7 @@ body {
             position: absolute;
             opacity: 0;
             animation: fadeIn 1s backwards;
-            animation-delay: 3s;
+            animation-delay: 2s;
         }
     }
 }
