--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -161,6 +161,9 @@ button:hover {
 
 .descriptionWrapper .descriptionPlat h3 {
   margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .descriptionWrapper .descriptionPlat p {
@@ -186,6 +189,7 @@ button:hover {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-bottom: 8px;
+  font-weight: 800;
 }
 
 .descriptionWrapper .animationPlat {
@@ -447,6 +451,36 @@ button:hover {
 .platWrapper_Entrée :nth-child(4) {
   -webkit-animation-delay: 0.7s;
           animation-delay: 0.7s;
+}
+
+.platWrapper_Plat :nth-child(2) {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+.platWrapper_Plat :nth-child(3) {
+  -webkit-animation-delay: 1100ms;
+          animation-delay: 1100ms;
+}
+
+.platWrapper_Plat :nth-child(4) {
+  -webkit-animation-delay: 1300ms;
+          animation-delay: 1300ms;
+}
+
+.platWrapper_Dessert :nth-child(2) {
+  -webkit-animation-delay: 1500ms;
+          animation-delay: 1500ms;
+}
+
+.platWrapper_Dessert :nth-child(3) {
+  -webkit-animation-delay: 1600ms;
+          animation-delay: 1600ms;
+}
+
+.platWrapper_Dessert :nth-child(4) {
+  -webkit-animation-delay: 1800ms;
+          animation-delay: 1800ms;
 }
 
 button {
