--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -145,6 +145,9 @@ footer .fa-handshake-angle {
 
 .descriptionWrapper .descriptionPlat h3 {
   margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .descriptionWrapper .descriptionPlat p {
@@ -170,6 +173,7 @@ footer .fa-handshake-angle {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-bottom: 8px;
+  font-weight: 800;
 }
 
 .descriptionWrapper .animationPlat {
